C#_Framework/MyMachineControl_Toolkits/HTM_Bsp_Lib_4.06/Example/CVI/HTM_Bsp_Lib/HTM_Bsp_Lib.h

/* Exported function prototypes-----------------------------------------------*/
		
/* HTM BSP(HT Motion Board support package) configuration functions */
HTM_API I32 HTM_Bsp_GetVersionNo(void);
	
HTM_API char* HTM_Bsp_GetVersionInfo(void);
HTM_API I32 HTM_Bsp_ShowVersion(void);
HTM_API I32 HTM_Bsp_Init(HTM_INIT_PARA *init_para);
HTM_API I32 HTM_Bsp_InitFromFile(char xmlFile[]);
HTM_API I32 HTM_Bsp_Discard(void);
HTM_API I32 HTM_Bsp_GetInitPara(HTM_INIT_PARA *init_para);
HTM_API I32 HTM_Bsp_GetMode(void);
HTM_API char *HTM_Bsp_GetConfigFilePath(void);
HTM_API I32 HTM_Bsp_LoadUI(void);
HTM_API I32 HTM_Bsp_DiscardUI(void);
HTM_API I32 HTM_Bsp_LoadToolUI(void);
HTM_API I32 HTM_Bsp_DiscardToolUI(void);
/* HTM_EventLog APIs*/
HTM_API I32 HTM_EventLog_LoadUI(void);
 
HTM_API I32 HTM_EventLog_DiscardUI(void);
HTM_API I32 HTM_EventLog_Start(int task_id, char event_name[], char *info_fmt, ...);
 
HTM_API I32 HTM_EventLog_End(int task_id);
/* Date & time utils APIs*/
HTM_API F64 HTM_GetTimeSec(void);
HTM_API U32 HTM_GetTimeMs(void);
HTM_API char* HTM_GetTimeStr(void);
HTM_API char *HTM_GetDateStr(void);
HTM_API I32 HTM_GetTime(I32 *hour, I32 *minute, I32 *second);
HTM_API I32 HTM_GetDate(I32 *year, I32 *month, I32 *day);
	
/* Axis operation APIs */
HTM_API I32 HTM_LoadAxisInfo(I32 axisIdx);
HTM_API I32 HTM_SaveAxisInfo(I32 axisIdx);
/* Other Device Operation APIs */
HTM_API I32 HTM_LoadDeviceInfo(I32 devIdx);
HTM_API I32 HTM_SaveDeviceInfo(I32 devIdx);
HTM_API I32 HTM_ConfigDeviceInfo(I32 devIdx);
HTM_API char *HTM_GetDeviceName(I32 devIdx);
HTM_API I32 HTM_GetDeviceType(I32 devIdx);
HTM_API I32 HTM_GetDeviceInfo(I32 devIdx, HTM_DeviceInfo *dev);
HTM_API I32 HTM_SetDeviceInfo(I32 devIdx, HTM_DeviceInfo *dev);
/* POSITIOIN TRIGGER */
HTM_API I32 HTM_SetPtTrigEnable(I32 devIdx, I32 ptIdx, I32 enable);
HTM_API I32 HTM_SetPtTrigPos(I32 devIdx, I32 ptIdx, F64 pos);
HTM_API I32 HTM_SWPosTrig(I32 devIdx);
HTM_API F64 HTM_GetPtTrigPos(I32 devIdx, I32 ptIdx);
HTM_API I32 HTM_SetLinTrigPos(I32 devIdx, TRIG_LIN *lin);
HTM_API I32 HTM_SetLinTrigEnable(I32 devIdx, I32 enable);
HTM_API I32 HTM_GetTrigCnt(I32 devIdx);
HTM_API I32 HTM_ResetTrigCnt(I32 devIdx);
HTM_API I32 HTM_GetTrigCurPos(I32 devIdx, F64 *pos);
HTM_API I32 HTM_SyncTrigCurPos(I32 devIdx);
/* Light Source Dirve */
HTM_API I32 HTM_SWLightTrig(I32 devIdx);
HTM_API I32 HTM_SetLightTrigSrc(I32 devIdx, U16 src_group);
HTM_API I32 HTM_SetLightTrigTime(I32 devIdx, F64 time_in_us);
/* Com Dirve */
HTM_API I32 HTM_GetComNo(I32 devIdx);
HTM_API I32 HTM_OpenCom(I32 devIdx);
HTM_API I32 HTM_CloseCom(I32 devIdx);
/*---------------------------analysis APIs------------------------------------*/
HTM_API void HTM_CalcRotatePos (const F64 former_x, const F64 former_y, const F64 rot_center_x, const F64 rot_center_y,
		F64 delta_deg, F64 *new_x, F64 *new_y);
HTM_API I32 HTM_Mean(F64 input_array[], I32 total_num, I32 delete_max_num, I32 delete_min_num, F64 *mean_val);
HTM_API I32 HTM_Sort(F64 input_array[], I32 total_num, I32 descending, F64 *output_array);
HTM_API I32 HTM_MaxMin(F64 input_array[], I32 total_num, F64 *max, I32 *max_id, F64 *min, I32 *min_id);
HTM_API I32 HTM_Sum(F64 input_array[], I32 total_num, F64 *sum);
HTM_API I32 HTM_MatrixMul(void *A_aXn, void *B_nXb, I32 rowOfA_a, I32 row_colOfAB_n, I32 colOfB_b, void *AB_aXb);
HTM_API I32 HTM_MatrixInv(void *input_matrix, I32 dimensionNum, void* output_matrix);
HTM_API I32 HTM_MatrixTranspose(void *input_matrix, I32 row_num, I32 col_num, void* output_matrix);
HTM_API I32 HTM_LineFit(const F64 x[], const F64 y[], I32 numberOfPoints, F64 *k, F64 *b);
HTM_API I32 HTM_PolyFit(const F64 x[], const F64 y[], I32 numberOfPoints, I32 order, F64* k);
HTM_API I32 HTM_CircleFit(const F64 x[], const F64 y[], I32 numberOfPoints, F64 *centerX, F64 *centerY, F64 *r);
HTM_API I32 HTM_LineInterp(F64 x[], F64 y[], I32 numberOfElements, F64 xValue, F64 *interpolatedYValue);
HTM_API I32	HTM_CalcTransMtx(void *A_nXa, void *B_nXb, I32 numberOfRows_n, I32 dimensionOfA_a, I32 dimensionOfB_b, void *A2B_aplus1Xb);
HTM_API I32 HTM_TransPos(void *A_1Xa, void *A2B_aplus1Xb, I32 dimensionOfA_a, I32 dimensionOfB_b, void *B_1Xb);
/*--------------------------common APIs---------------------------------------*/
HTM_API F64 HTM_GetTimeSec(void);
HTM_API U32 HTM_GetTimeMs(void);
HTM_API char* HTM_GetTimeStr(void);
HTM_API char *HTM_GetDateStr(void);
HTM_API I32 HTM_GetTime(I32 *hour, I32 *minute, I32 *second);
HTM_API I32 HTM_GetDate(I32 *year, I32 *month, I32 *day);