C#Winform/MyMachineControl_Toolkits/HTM_interface/HTM_interface/HTM_Bsp_Lib.cs


        #region  Other Device Operation APIs
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_InitDeviceInfo(String file, UInt16 devNum, Byte offline_mode);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern void HTM_DiscardDeviceInfo();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_LoadDeviceInfo(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SaveDeviceInfo(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ConfigDeviceInfo(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetDeviceName(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetDeviceType(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetDeviceInfo(Int32 devIdx, out DEVICE_INFO dev);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetDeviceInfo(Int32 devIdx, DEVICE_INFO[] dev);
        #endregion

        #region  Postion Trigger board
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetPtTrigEnable(Int32 devIdx, Int32 ptIdx, Int32 enable);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetPtTrigPos(Int32 devIdx, Int32 ptIdx, Double pos);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SWPosTrig(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetPtTrigPos(Int32 devIdx, Int32 ptIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetLinTrigPos(Int32 devIdx, TRIG_LINEAR lin);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetLinTrigEnable(Int32 devIdx, Int32 enable);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetTrigCnt(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_ResetTrigCnt(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetTrigCurPos(Int32 devIdx, out Double pos);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SyncTrigCurPos(Int32 devIdx);
        #endregion

        #region  Light Source Dirve
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SWLightTrig(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetLightTrigSrc(Int32 devIdx, UInt16 src_group);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_SetLightTrigTime(Int32 devIdx, Double time_in_us);
        #endregion

        #region Com Dirve
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetComNo(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_OpenCom(Int32 devIdx);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CloseCom(Int32 devIdx);
        #endregion

        #region  Utils lib
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Double HTM_GetTimeSec();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern UInt32 HTM_GetTimeMs();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetTimeStr();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern IntPtr HTM_GetDateStr();
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetTime(out Int32 hour, out Int32 minute, out Int32 second);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_GetDate(out Int32 year, out Int32 month, out Int32 day);
        #endregion

        #region  Analysis lib
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern void HTM_CalcRotatePos(Double former_x, Double former_y, Double rot_center_x, Double rot_center_y, Double delta_deg, out Double new_x, out Double new_y);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Mean(Double[] input_array, Int32 total_num, Int32 delete_max_num, Int32 delete_min_num, out Double mean_val);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Sort(Double[] input_array, Int32 total_num, Int32 descending, Double[] output_array);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MaxMin(Double[] input_array, Int32 total_num, out Double max, out Int32 max_id, out Double min, out Int32 min_id);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_Sum(Double[] input_array, Int32 total_num, out Double sum);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MatrixMul(Double[] A_aXn, Double[] B_nXb, Int32 rowOfA_a, Int32 row_colOfAB_n, Int32 colOfB_b, Double[] AB_aXb);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MatrixInv(Double[] input_matrix, Int32 dimensionNum, Double[] output_matrix);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_MatrixTranspose(Double[] input_matrix, Int32 row_num, Int32 col_num, Double[] output_matrix);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_LineFit(Double[] x, Double[] y, Int32 numberOfPoints, out Double k, out Double b);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_PolyFit(Double[] x, Double[] y, Int32 numberOfPoints, Int32 order, out Double k);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CircleFit(Double[] x, Double[] y, Int32 numberOfPoints, out Double centerX, out Double centerY, out Double r);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_LineInterp(Double[] x, Double[] y, Int32 numberOfElements, Double xValue, out Double interpolatedYValue);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_CalcTransMtx(Double[] A_nXa, Double[] B_nXb, Int32 numberOfRows_n, Int32 dimensionOfA_a, Int32 dimensionOfB_b, Double[] A2B_aplus1Xb);
        [DllImport(_Dll, CallingConvention = _Cvt)] public static extern Int32 HTM_TransPos(Double[] A_1Xa, Double[] A2B_aplus1Xb, Int32 dimensionOfA_a, Int32 dimensionOfB_b, Double[] B_1Xb);
        #endregion
    }
    #endregion

    #region HTM API接口，针对HTM_API原生C语言接口进行二次封装，适合C#开发
    /// <summary>HTM API接口，针对HTM_API原生C语言接口进行二次封装，适合C#开发</summary>
    public class HTM
    {
        #region BSP Operation Apis
        /// <summary>获取BSP版本号。</summary>
        /// <returns>返回版本号Int32类型.</returns>
        public static Int32 GetVersionNo() { return HTM_API.HTM_Bsp_GetVersionNo(); }
        /// <summary>获取BSP版本信息，例如x64_3.07_2017.0806。</summary>
        /// <returns>返回版本信息.</returns>
        public static String GetVersionInfo()
        {
            IntPtr pRet = HTM_API.HTM_Bsp_GetVersionInfo();
            return Marshal.PtrToStringAnsi(pRet);
        }
        /// <summary>显示BSP版本信息(弹窗)。</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 ShowVersion() { return HTM_API.HTM_Bsp_ShowVersion(); }
        /// <summary>初始化BSP(申请内存，板卡通讯建立等)。</summary>
        /// <param name="init">输入，初始化配置信息, 如果config_file参数为空则默认取工程目录下的htm_config.db文件</param>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 Init(ref INIT_PARA init) { return HTM_API.HTM_Bsp_Init(ref init); }
        /// <summary>通过配置文件，初始化BSP(申请内存，板卡通讯建立等)。</summary>
        /// <param name="str">配置文件全名(xml格式，扩展名任意))</param>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 InitFromFile(String str) { return HTM_API.HTM_Bsp_InitFromFile(str); }
        /// <summary>获取初始化时所用配置文件路径。</summary>
        /// <returns>返回全路径.</returns>
        public static String GetConfigFile()
        {
            IntPtr pRet = HTM_API.HTM_Bsp_GetConfigFilePath();
            return Marshal.PtrToStringAnsi(pRet);
        }
        /// <summary>获取当前初始化所用配置信息。</summary>
        /// <param name="init">输出，初始化配置信息</param>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 GetInitPara(out INIT_PARA init) { return HTM_API.HTM_Bsp_GetInitPara(out init); }
        /// <summary>获取BSP运行模式。</summary>
        /// <returns>返回运行模式，0-在线模式，1-脱机模式，2-调试模式(初始化时不检测硬件设备是否匹配，仅打开板卡).</returns>
        public static Int32 GetMode() { return HTM_API.HTM_Bsp_GetMode(); }
        /// <summary>BSP卸载，板卡通讯断开，清除内存等。</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 Discard() { return HTM_API.HTM_Bsp_Discard(); }
        /// <summary>加载轴、I/O等设备配置和调试面板（仅在正确初始化之后有效）</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 LoadUI() { return HTM_API.HTM_Bsp_LoadUI(); }
        /// <summary>加载轴调试小工具界面（仅在正确初始化之后有效）</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 LoadToolUI() { return HTM_API.HTM_Bsp_LoadToolUI(); }
        /// <summary>卸载时间轴、I/O等设备配置和调试窗口</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 DiscardUI() { return HTM_API.HTM_Bsp_DiscardUI(); }
        /// <summary>卸载轴、I/O工具窗口</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 DiscardToolUI() { return HTM_API.HTM_Bsp_DiscardToolUI(); }
        #endregion

        #region HTM_EventLog APIs        
        /// <summary>加载事件记录监控窗口（可以单独使用，运行BSP不初始化）</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 EventLog_LoadUI() { return HTM_API.HTM_EventLog_LoadUI(); }
        /// <summary>卸载时间记录监控窗口</summary>
        /// <returns>返回0代表成功，负值表示失败.</returns>
        public static Int32 EventLog_DiscardUI() { return HTM_API.HTM_EventLog_DiscardUI(); }
        /// <summary>用于记录开始时的信息。多线程重入：安全。</summary>
        /// <param name="task_id">用来标识任务的ID(正整数)。</param>
        /// <param name="name">待记录事件的名字。</param>
        /// <param name="msg">待记录事件信息的格式，用法和printf函数完全一样。如果不需要可以传入0</param>
        /// <returns>whether the module is loaded successfully. -1-failed, 0-success.</returns>
        public static Int32 EventLog_Start(Int32 task_id, string name, string msg) { return HTM_API.HTM_EventLog_Start(task_id, name, msg); }
        /// <summary>用于记录结束时的信息。多线程重入：安全。</summary>
        /// <param name="task_id">用来标识任务的ID(正整数)。</param>
        /// <returns>whether the module is loaded successfully. -1-failed, 0-success.</returns>
        public static Int32 EventLog_End(Int32 task_id) { return HTM_API.HTM_EventLog_End(task_id); }
        #endregion

        #region Axis operation APIs        
        /// <summary>初始化轴信息(申请所需内存)。</summary>
        /// <param name="file">数据库全路径</param>
        /// <param name="axisNum">轴个数</param>
        /// <param name="offline_mode">离线模式(1-离线，不初始化板卡，0-在线)</param>
        /// <returns>返回0代表成功，-1表示失败.</returns>
        public static Int32 InitAxisInfo(String file, UInt16 axisNum, Byte offline_mode) { return HTM_API.HTM_InitAxisInfo(file, axisNum, offline_mode); }
        /// <summary>释放轴信息所占用内存空间</summary>
        public static void DiscardAxisInfo() { HTM_API.HTM_DiscardAxisInfo(); }
        /// <summary>从数据库中加载轴信息，加载到内存中(可通过HTM_API.HTM_GetAxisInfo获得)。</summary>
        /// <param name="axisIdx">轴号(0-based)</param>
        /// <returns>返回0代表成功，-1表示失败.</returns>
        public static Int32 LoadAxisInfo(Int32 axisIdx) { return HTM_API.HTM_LoadAxisInfo(axisIdx); }
        /// <summary>保存内存中的轴信息到数据库中。</summary>
        /// <param name="axisIdx">轴号(0-based)</param>
        /// <returns>返回0代表成功，-1表示失败.</returns>
        public static Int32 SaveAxisInfo(Int32 axisIdx) { return HTM_API.HTM_SaveAxisInfo(axisIdx); }
        #endregion
